<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--First Name -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_firstName"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstName"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/first_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Last Name -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_lastName"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastName"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/last_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Date Of Birth-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_dob"
                style="@style/TextInputLayoutStyle"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Email ID -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_email"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/emailId" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_password"
                style="@style/TextInputLayoutStyle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/password"
                    android:password="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_confirmPassword"
                style="@style/TextInputLayoutStyle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmPassword"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/confirm_password"
                    android:password="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Mobile Number-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_mobileNumber"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobileNumber"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign Up -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/sign_up"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>